@@ -1,8 +1,9 @@
-package com.gentics.mesh.core.ssl;
+package com.gentics.mesh.rest.client.impl;
 
-import java.io.FileInputStream;
-import java.io.FileReader;
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.Reader;
 import java.security.KeyManagementException;
 import java.security.KeyStore;
 import java.security.KeyStoreException;
@@ -13,6 +14,7 @@ import java.security.cert.Certificate;
 import java.security.cert.CertificateException;
 import java.security.cert.CertificateFactory;
 import java.security.cert.X509Certificate;
+import java.time.Duration;
 
 import javax.net.ssl.KeyManager;
 import javax.net.ssl.KeyManagerFactory;
@@ -25,90 +27,106 @@ import org.bouncycastle.asn1.pkcs.PrivateKeyInfo;
 import org.bouncycastle.openssl.PEMParser;
 import org.bouncycastle.openssl.jcajce.JcaPEMKeyConverter;
 
+import com.gentics.mesh.rest.client.MeshRestClientConfig;
 import com.gentics.mesh.util.UUIDUtil;
 
 import io.vertx.core.logging.Logger;
 import io.vertx.core.logging.LoggerFactory;
+import okhttp3.Dispatcher;
 import okhttp3.OkHttpClient;
 import okhttp3.OkHttpClient.Builder;
-import okhttp3.Request;
-import okhttp3.Response;
 
-public class SSLTestClient {
+public final class OkHttpClientUtil {
 
-	private static final Logger log = LoggerFactory.getLogger(SSLTestClient.class);
+	private static final Logger log = LoggerFactory.getLogger(OkHttpClientUtil.class);
 
-	public static final String CLIENT_CERT_PEM = "src/test/resources/client-ssl/alice.pem";
-	public static final String CLIENT_KEY_PEM = "src/test/resources/client-ssl/alice.key";
-	public static final String CA_CERT = "src/test/resources/client-ssl/server.pem";
-	public static final String FMT_TEST_URL = "https://localhost:%s/api/v1";
-
-	/**
-	 * Invoke call to /api/v1
-	 * 
-	 * @param httpsPort
-	 * @param sendClientAuth
-	 * @param trustAll
-	 * @throws IOException
-	 */
-	public static void call(int httpsPort, boolean sendClientAuth, boolean trustAll) throws IOException {
-		OkHttpClient client = client(sendClientAuth, trustAll);
-		Request request = new Request.Builder().url(String.format(FMT_TEST_URL, httpsPort)).build();
-
-		log.info("Performing request: " + request);
-		Response response = client.newCall(request).execute();
-		log.info("Received response: " + response);
+	private OkHttpClientUtil() {
 	}
 
-	public static OkHttpClient client(boolean sendClientAuth, boolean trustAll) {
+	public static OkHttpClient createClient(MeshRestClientConfig config) {
+
+		Dispatcher dispatcher = new Dispatcher();
+		dispatcher.setMaxRequestsPerHost(64);
+
+		// We need a long timeout per default since some requests take a long time. For all tests a 1 minute timeout works fine.
+		Builder builder = new OkHttpClient.Builder()
+			.callTimeout(Duration.ofMinutes(1))
+			.connectTimeout(Duration.ofMinutes(1))
+			.writeTimeout(Duration.ofMinutes(1))
+			.readTimeout(Duration.ofMinutes(1))
+			.dispatcher(dispatcher);
+
+		initializeHttpClient(builder, config);
+		return builder.build();
+	}
+
+	private static void initializeHttpClient(Builder builder, MeshRestClientConfig config) {
 		KeyManager[] keyManagers = null;
 		TrustManager[] trustManagers = null;
 
-		if (sendClientAuth) {
+		byte[] clientKey = config.getClientKey();
+		byte[] clientCert = config.getClientCert();
+
+		// Only create a key manager if the keys/certs have been specified.
+		if (clientKey != null && clientCert != null) {
 			try {
-				log.info("Loading private key from " + CLIENT_KEY_PEM);
-				keyManagers = getKeyManagersPem();
+				keyManagers = getKeyManagersPem(config);
 			} catch (KeyStoreException | UnrecoverableKeyException | NoSuchAlgorithmException | IOException | CertificateException e) {
 				rethrow(e, "Could not create key managers");
 			}
 		} else {
-			log.info("Not sending client certificate");
+			if (log.isDebugEnabled()) {
+				log.debug("Not sending client certificate");
+			}
 		}
 
-		if (trustAll) {
-			trustManagers = getDummyTrustManager();
-		} else {
+		if (config.getTrustedCA() != null) {
 			try {
-				trustManagers = getTrustManagers();
+				trustManagers = getTrustManagers(config);
 			} catch (CertificateException | IOException | KeyStoreException | NoSuchAlgorithmException e) {
 				rethrow(e, "Could not create trust managers");
 			}
+		} else {
+			if (log.isDebugEnabled()) {
+				log.debug("No trusted CA found. Trusting all CA's");
+			}
+			trustManagers = getDummyTrustManager();
 		}
-		SSLContext sslCtx = null;
 
+		SSLContext sslCtx = null;
 		try {
+			log.debug("Creating SSL context");
 			sslCtx = SSLContext.getInstance("TLS");
 			sslCtx.init(keyManagers, trustManagers, null);
 		} catch (NoSuchAlgorithmException | KeyManagementException e) {
 			rethrow(e, "Could not create SSL context");
 		}
 
-		Builder builder = new OkHttpClient.Builder();
-		builder.hostnameVerifier((hostName, sslSession) -> true);
-		return builder.sslSocketFactory(sslCtx.getSocketFactory(), (X509TrustManager) trustManagers[0])
-			.build();
+		if (!config.isVerifyHostnames()) {
+			log.debug("Disabling hostname verification");
+			builder.hostnameVerifier((hostName, sslSession) -> true);
+		}
+		if (sslCtx != null) {
+			builder.sslSocketFactory(sslCtx.getSocketFactory(), (X509TrustManager) trustManagers[0]);
+		}
+
 	}
 
-	private static KeyManager[] getKeyManagersPem()
+	private static KeyManager[] getKeyManagersPem(MeshRestClientConfig config)
 		throws KeyStoreException, NoSuchAlgorithmException, UnrecoverableKeyException, IOException, CertificateException {
+		// The keystore pass is only used to access the in-memory keystore thus a random PW is sufficient
 		char[] randomKeyStorePass = UUIDUtil.randomUUID().toCharArray();
+		byte[] clientKeyData = config.getClientKey();
+		byte[] clientCertData = config.getClientCert();
 		CertificateFactory certificateFactory = CertificateFactory.getInstance("X.509");
-		X509Certificate clientCert = (X509Certificate) certificateFactory.generateCertificate(new FileInputStream(CLIENT_CERT_PEM));
+		X509Certificate clientCert = (X509Certificate) certificateFactory.generateCertificate(new ByteArrayInputStream(clientCertData));
 		KeyStore keyStore = KeyStore.getInstance(KeyStore.getDefaultType());
 		KeyManagerFactory keyManagerFactory = KeyManagerFactory.getInstance(KeyManagerFactory.getDefaultAlgorithm());
 		String principal = clientCert.getSubjectX500Principal().getName();
 
-		try (PEMParser pemParser = new PEMParser(new FileReader(CLIENT_KEY_PEM))) {
+		Reader targetReader = new InputStreamReader(new ByteArrayInputStream(clientKeyData));
+		try (PEMParser pemParser = new PEMParser(targetReader)) {
+			log.debug("Read client key PEM file");
 			PrivateKey privateKey = new JcaPEMKeyConverter().getPrivateKey((PrivateKeyInfo) pemParser.readObject());
 			keyStore.load(null);
 			keyStore.setCertificateEntry(principal + "Cert", clientCert);
@@ -119,11 +137,13 @@ public class SSLTestClient {
 		return keyManagerFactory.getKeyManagers();
 	}
 
-	private static TrustManager[] getTrustManagers() throws NoSuchAlgorithmException, KeyStoreException, IOException, CertificateException {
+	private static TrustManager[] getTrustManagers(MeshRestClientConfig config)
+		throws NoSuchAlgorithmException, KeyStoreException, IOException, CertificateException {
+		byte[] caCertData = config.getTrustedCA();
 		TrustManagerFactory trustManagerFactory = TrustManagerFactory.getInstance(TrustManagerFactory.getDefaultAlgorithm());
 		KeyStore keyStore = KeyStore.getInstance(KeyStore.getDefaultType());
 		CertificateFactory certificateFactory = CertificateFactory.getInstance("X.509");
-		X509Certificate caCert = (X509Certificate) certificateFactory.generateCertificate(new FileInputStream(CA_CERT));
+		X509Certificate caCert = (X509Certificate) certificateFactory.generateCertificate(new ByteArrayInputStream(caCertData));
 
 		keyStore.load(null);
 		keyStore.setCertificateEntry(caCert.getSubjectX500Principal().getName(), caCert);
